Cleaner Gallery extension IE8 CSS fix for max-width.
git-svn-id: http://svn.locallylost.com/themes/hybrid-core/trunk@726 dba0f204-706d-4bc1-bc29-8b92e0485636

--- a/css/gallery.dev.css
+++ b/css/gallery.dev.css
@@ -1,5 +1,6 @@
 /**
  * Cleaner Gallery Stylesheet
+ * @version 0.9.2
  */
 
 .gallery {
@@ -23,6 +24,7 @@
 	padding: 0;
 	}
 .gallery .gallery-item .gallery-icon img {
+	width: auto;
 	max-width: 89%;
 	height: auto;
 	padding: 1%;
